# gx-streamlit-data-validator

./: LICENSE  README.md  app_dynamic_expectations.py  app_static_expectations.py  pyproject.toml
gx_streamlit_data_validator/: __init__.py  utils.py
gx_streamlit_data_validator/sample_data/: static_expectations_dataset.csv
