[tool.poetry]
name = "gx_streamlit_data_validator"
version = "0.0.1"
description = "Proof-of-concept dynamic data validator with great-expectations and streamlit"
authors = ["Rachel House <rhouse@hey.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pandas = "^1.5.3"
streamlit = "^1.23.1"
great-expectations = "^0.16.16"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ipykernel = "^6.23.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"